--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 /*NAVIGATION HEADER*/
 body{
-    font-family: 'Inter', sans-serif !important;
+    font-family: 'Manrope', sans-serif !important;
     margin: 0;
     padding: 0;
     width: 100%;
