--- a/css/news.css
+++ b/css/news.css
@@ -8,7 +8,12 @@
 }
 
 .listNewsContainer, .socialMediaContainer {
-    margin-bottom: 2%;
+    margin-bottom: 1%; /* Reduced spacing */
+    width: 90%; /* Adjusted to match similar size */
+}
+.socialMediaContainer {
+    margin-bottom: 1%; /* Reduced spacing */
+    width: 100%; /* Adjusted to match similar size */
 }
 
 .listNews {
